examples/components/error/error-message-radio.njk
{% from "components/form/controls/radiobutton.njk" import radiobutton as radiobutton %}
<div class="form-group form-error">
    <fieldset aria-describedby="example-radiobutton-error">
        <legend class="h5">Sagen handler om</legend>
        <span class="form-error-message" id="example-radiobutton-error"><span class="sr-only">Fejl:</span> Vælg hvad sagen handler om</span>
        <ul class="nobullet-list">
            {% for item in radiobuttons_error_example.items %}<li>{{ radiobutton(item) }}</li>{% endfor %}
        </ul>
    </fieldset>
</div>
